sdk/lib/zxio/include/lib/zxio/zxio.h


ZXIO_EXPORT zx_status_t zxio_create(zx_handle_t handle, zxio_storage_t* storage);
ZXIO_EXPORT zx_status_t zxio_create_with_on_open(zx_handle_t handle, zxio_storage_t* storage);
ZXIO_EXPORT zx_status_t zxio_create_with_info(zx_handle_t handle,
                                              const zx_info_handle_basic_t* chandle_info,
                                              zxio_storage_t* storage);
zx_status_t zxio_create_with_type(zxio_storage_t* storage, zxio_object_type_t type, ...);
ZXIO_EXPORT zx_status_t zxio_close(zxio_t* io);
ZXIO_EXPORT zx_status_t zxio_release(zxio_t* io, zx_handle_t* out_handle);
zx_status_t zxio_borrow(zxio_t* io, zx_handle_t* out_handle);
ZXIO_EXPORT zx_status_t zxio_clone(zxio_t* io, zx_handle_t* out_handle);
ZXIO_EXPORT zx_status_t zxio_reopen(zxio_t* io, zxio_reopen_flags_t flags, zx_handle_t* out_handle);
ZXIO_EXPORT zx_status_t zxio_wait_one(zxio_t* io, zxio_signals_t signals, zx_time_t deadline,
                                      zxio_signals_t* out_observed);
ZXIO_EXPORT void zxio_wait_begin(zxio_t* io, zxio_signals_t zxio_signals, zx_handle_t* out_handle,
                                 zx_signals_t* out_zx_signals);
ZXIO_EXPORT void zxio_wait_end(zxio_t* io, zx_signals_t zx_signals,
                               zxio_signals_t* out_zxio_signals);
ZXIO_EXPORT zx_status_t zxio_sync(zxio_t* io);
ZXIO_EXPORT zx_status_t zxio_attr_get(zxio_t* io, zxio_node_attributes_t* out_attr);
ZXIO_EXPORT zx_status_t zxio_attr_set(zxio_t* io, const zxio_node_attributes_t* attr);
ZXIO_EXPORT zx_status_t zxio_read(zxio_t* io, void* buffer, size_t capacity, zxio_flags_t flags,
                                  size_t* out_actual);
ZXIO_EXPORT zx_status_t zxio_read_at(zxio_t* io, zx_off_t offset, void* buffer, size_t capacity,
                                     zxio_flags_t flags, size_t* out_actual);
ZXIO_EXPORT zx_status_t zxio_write(zxio_t* io, const void* buffer, size_t capacity,
                                   zxio_flags_t flags, size_t* out_actual);
ZXIO_EXPORT zx_status_t zxio_write_at(zxio_t* io, zx_off_t offset, const void* buffer,
                                      size_t capacity, zxio_flags_t flags, size_t* out_actual);
ZXIO_EXPORT zx_status_t zxio_readv(zxio_t* io, const zx_iovec_t* vector, size_t vector_count,
                                   zxio_flags_t flags, size_t* out_actual);
ZXIO_EXPORT zx_status_t zxio_readv_at(zxio_t* io, zx_off_t offset, const zx_iovec_t* vector,
                                      size_t vector_count, zxio_flags_t flags, size_t* out_actual);
ZXIO_EXPORT zx_status_t zxio_writev(zxio_t* io, const zx_iovec_t* vector, size_t vector_count,
                                    zxio_flags_t flags, size_t* out_actual);
ZXIO_EXPORT zx_status_t zxio_writev_at(zxio_t* io, zx_off_t offset, const zx_iovec_t* vector,
                                       size_t vector_count, zxio_flags_t flags, size_t* out_actual);
ZXIO_EXPORT zx_status_t zxio_seek(zxio_t* io, zxio_seek_origin_t start, int64_t offset,
                                  size_t* out_offset);
ZXIO_EXPORT zx_status_t zxio_truncate(zxio_t* io, uint64_t length);
ZXIO_EXPORT zx_status_t zxio_flags_get(zxio_t* io, uint32_t* out_flags);
ZXIO_EXPORT zx_status_t zxio_flags_set(zxio_t* io, uint32_t flags);
ZXIO_EXPORT zx_status_t zxio_token_get(zxio_t* io, zx_handle_t* out_token);
ZXIO_EXPORT zx_status_t zxio_vmo_get(zxio_t* io, uint32_t flags, zx_handle_t* out_vmo,
                                     size_t* out_size);
ZXIO_EXPORT zx_status_t zxio_vmo_get_copy(zxio_t* io, zx_handle_t* out_vmo, size_t* out_size);
ZXIO_EXPORT zx_status_t zxio_vmo_get_clone(zxio_t* io, zx_handle_t* out_vmo, size_t* out_size);
ZXIO_EXPORT zx_status_t zxio_vmo_get_exact(zxio_t* io, zx_handle_t* out_vmo, size_t* out_size);
ZXIO_EXPORT zx_status_t zxio_vmo_get_exec(zxio_t* io, zx_handle_t* out_vmo, size_t* out_size);
ZXIO_EXPORT zx_status_t zxio_get_read_buffer_available(zxio_t* io, size_t* out_available);
zx_status_t zxio_shutdown(zxio_t* io, zxio_shutdown_options_t options);
ZXIO_EXPORT zx_status_t zxio_open(zxio_t* directory, uint32_t flags, uint32_t mode,
                                  const char* path, size_t path_len, zxio_storage_t* storage);
ZXIO_EXPORT zx_status_t zxio_open_async(zxio_t* directory, uint32_t flags, uint32_t mode,
                                        const char* path, size_t path_len, zx_handle_t request);
ZXIO_EXPORT zx_status_t zxio_add_inotify_filter(zxio_t* io, const char* path, size_t path_len,
                                                uint32_t mask, uint32_t watch_descriptor,
                                                zx_handle_t socket);
ZXIO_EXPORT zx_status_t zxio_unlink(zxio_t* directory, const char* name, size_t name_len,
                                    int flags);
ZXIO_EXPORT zx_status_t zxio_rename(zxio_t* old_directory, const char* old_path,
                                    size_t old_path_len, zx_handle_t new_directory_token,
                                    const char* new_path, size_t new_path_len);
ZXIO_EXPORT zx_status_t zxio_link(zxio_t* src_directory, const char* src_path, size_t src_path_len,
                                  zx_handle_t dst_directory_token, const char* dst_path,
                                  size_t dst_path_len);
ZXIO_EXPORT zx_status_t zxio_dirent_iterator_init(zxio_dirent_iterator_t* iterator,
                                                  zxio_t* directory);
ZXIO_EXPORT zx_status_t zxio_dirent_iterator_next(zxio_dirent_iterator_t* iterator,
                                                  zxio_dirent_t* inout_entry);
ZXIO_EXPORT void zxio_dirent_iterator_destroy(zxio_dirent_iterator_t* iterator);
ZXIO_EXPORT zx_status_t zxio_isatty(zxio_t* io, bool* tty);
ZXIO_EXPORT zx_status_t zxio_get_window_size(zxio_t* io, uint32_t* width, uint32_t* height);
ZXIO_EXPORT zx_status_t zxio_set_window_size(zxio_t* io, uint32_t width, uint32_t height);